# diplomaProjectDaniil

./: .gitignore  README.md  _tmp_.py  main.py  pyproject.toml  requirements.txt
apps/: application.py  check_knowledge.py  tests.py
dependencies/: config.py  exceptions.py  project_data.py
display/: __init__.py  main_window.py  test_window.py
display/origin_files/: .login_data.json  mainWindow.ui  main_window.ui  testWindow.ui  test_schema.json
files/: .login_data.json  test_schema.json
files/examples/: __init__.py
files/tests/: 1_1.json
